# espire_music

./: pyproject.toml
espire_music/: db.sqlite3  manage.py
espire_music/espire_music/: asgi.py  settings.py  urls.py  wsgi.py
espire_music/frontend/: package-lock.json  package.json  webpack.config.js
espire_music/frontend/src/: index.html  index.js
espire_music/frontend/src/components/: main.jsx  reg.jsx
espire_music/frontend/static/frontend/: main.js
espire_music/frontend/templates/frontend/: index.html
espire_music/mainapp/: admin.py  models.py  serializers.py  urls.py  views.py
espire_music/mainapp/migrations/: 0001_initial.py
files/: package.json
